# Multi-Channel-Radioactive-Dose-Compute-Display-and-Transfer---NIM-A

./: .clang-format  .gitingore  8253count.c  BB  CMakeLists.txt  Dose_Proj.uvgui.1HTR001AR  Dose_Proj.uvopt  Dose_Proj.uvproj  Masterdisplay.c  STC15F2K60S2.h  Serial1Dip.c  at24c16.c  collateral.c  config.h  lcd.c  main.c  measure.c  reset.c  serial.c  setinput.c  setpara.c  settime.c  time0.c
Listings/: 8253count.lst  Dose_Proj.m51  Masterdisplay.lst  STARTUP.lst  Serial1Dip.lst  at24c16.lst  collateral.lst  lcd.lst  main.lst  measure.lst  reset.lst  serial.lst  setinput.lst  setpara.lst  settime.lst  time0.lst
Objects/: Dose_Proj  Dose_Proj.build_log.htm  Dose_Proj.hex  Dose_Proj.lnp
